# rich-jira-release-notes

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  template.md.jinja
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_documentation.yml  code_quality.yml  release.yml
CHANGELOG/: index.html
LICENSE/: index.html
docs/: CHANGELOG.md  README.md  reference.md
reference/SUMMARY/: index.html
reference/rich_jira_release_notes/: index.html
reference/rich_jira_release_notes/core/: index.html
reference/rich_jira_release_notes/core/generator/: index.html
reference/rich_jira_release_notes/libs/: index.html
reference/rich_jira_release_notes/libs/jira/: index.html
reference/rich_jira_release_notes/libs/jira/config/: index.html
reference/rich_jira_release_notes/libs/jira/jira_api/: index.html
reference/rich_jira_release_notes/main/: index.html
scripts/: copy_docs.sh  git_prune.sh
search/: search_index.json
src/rich_jira_release_notes/: main.py
src/rich_jira_release_notes/core/: generator.py
src/rich_jira_release_notes/libs/jira/: config.py  jira_api.py
